# drishti-sdk

./: .env.example  LICENSE  README.md  e2e_test.py  pyproject.toml  test_alert_trigger.py
drishti/: __init__.py  client.py  costs.py  errors.py  sender.py  trace.py
tests/: test_client.py  test_costs.py  test_trace.py
