[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drishti-ai-sdk"
version = "0.1.3"
description = "India's AI agent observability SDK — INR-native, 2 lines of code"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = [
    "ai", "agents", "observability", "llm", "tracing",
    "india", "monitoring", "langchain", "openai", "anthropic"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://drishti.dev"
Documentation = "https://docs.drishti.dev"
Repository = "https://github.com/Harsh-0602/Drishti"
"Bug Tracker" = "https://github.com/Harsh-0602/Drishti/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["drishti"]
